--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,7 +80,7 @@ p{
 .main-content{
   max-width: 120rem;
   margin: 0 auto;
-  padding: var(--gap);
+  padding: 10rem var(--gap);
 }
 
 .section{
@@ -152,7 +152,7 @@ p{
     grid-template-columns: 1fr 1.5fr;
     align-items: center;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro-text-content, .intro-img{
@@ -168,7 +168,8 @@ p{
 
 .top3-content{
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: center;
     height: 100vh;
     max-width: 64rem;
@@ -179,7 +180,7 @@ p{
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .grid-main-heading{
