--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,3 +231,33 @@ p{
    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
 }
 
+.responsive-table{
+    overflow: auto;
+}
+
+table{
+    width: 100%;
+    min-width: 36rem;
+    border-collapse: collapse;
+}
+
+table caption{
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+table th, table td{
+    padding: 1rem;
+    text-align: left;
+    border: 0.1rem solid var(--light-gray-color);
+    white-space: nowrap;
+}
+
+tfoot td, table th{
+   background: var(--light-gray-color);
+   color: var(--primary-color);
+   border: 0.1rem solid var(--primary-color);
+}
+
