--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
     --secondary-color: crimson;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
+    --medium-gray-color: #CCCCCC;
     --gap: 3rem;
 }
 
@@ -77,6 +78,11 @@ p{
     color: var(--primary-color);
 }
 
+.light-gray-bg{
+    background-color: var(--light-gray-color);
+    color: var(--primary-color);
+}
+
 .main-content{
   max-width: 120rem;
   margin: 0 auto;
@@ -147,10 +153,8 @@ p{
 
 .intro-content{
     position: relative;
-    top: -8rem;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
-    align-items: center;
     gap: var(--gap);
     min-height: 100vh;
 }
@@ -260,4 +264,87 @@ tfoot td, table th{
    color: var(--primary-color);
    border: 0.1rem solid var(--primary-color);
 }
+
+.contact-form{
+    grid-column: span 2;
+}
+
+.contact-form .form-grid{
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-grid legend{
+    font-style: italic;
+    font-size: 1.6rem;
+    margin-bottom: 3rem;
+}
+
+.form-group{
+    flex: 1 1 32rem;
+}
+
+.form-group label{
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.form-group input, 
+.form-group textarea{
+   border: none;
+   background: var(--light-gray-color);
+   padding: 1.5rem 2rem;
+   width: 100%;
+   font-size: 3rem;
+   outline: none;
+}
+
+.form-group input:focus, 
+.form-group textarea:focus{
+   box-shadow: 0 0 15px var(--primary-color);
+}
+
+.full-width{
+    width: 100%;
+    flex: 1 1 100%
+}
+
+.form-group button{
+    border: 0.1rem solid var(--primary-color);
+    background: var(--light-gray-color);
+    color: var(--primary-color);
+    box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.5);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+.form-group button:hover{
+    border: 0.1rem solid var(--light-gray-color);
+    background: var(--primary-color);
+    color: var(--white-color);
+}
+
+.form-group ::placeholder{
+    color: var(--medium-gray-color);
+}
+
+footer{
+    text-align: center;
+    font-size: 1.6rem;
+}
+
+footer p{
+    color: var(--primary-color);
+    padding: 3rem;
+    margin: 0;
+}
+
+footer .heart{
+    color: var(--secondary-color);
+}
+
 
