--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,7 +175,7 @@ p{
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     max-width: 64rem;
     text-align: center;
 }
@@ -345,6 +345,23 @@ footer p{
 
 footer .heart{
     color: var(--secondary-color);
+}
+
+@media (max-width: 800px){
+    .intro-content, .grid{
+        grid-template-columns: 1fr;
+    }
+
+    .gallery-img{
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+      
+    }
+
+    .gallery-img img{
+        width: 100%;
+    }
 }
 
 
