--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,8 +176,8 @@ p{
     flex-wrap: nowrap;
     justify-content: center;
     min-height: 100vh;
-    max-width: 64rem;
     text-align: center;
+    max-width: 64rem;
 }
 
 .grid-one-content{
@@ -236,12 +236,13 @@ p{
 }
 
 .responsive-table{
-    overflow: auto;
+    overflow: hidden;
+    overflow-x: auto;
 }
 
 table{
-    width: 100%;
     min-width: 36rem;
+    width: 100%;
     border-collapse: collapse;
 }
 
@@ -347,7 +348,32 @@ footer .heart{
     color: var(--secondary-color);
 }
 
+.close-menu{
+  display: none;
+}
+
+.back-to-top{
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    transform: rotate(-90deg);
+    border: 0.1rem solid var(--primary-color);
+}
+
 @media (max-width: 800px){
+
+    h2{
+        font-size: 3.6rem;
+    }
+
     .intro-content, .grid{
         grid-template-columns: 1fr;
     }
@@ -362,6 +388,52 @@ footer .heart{
     .gallery-img img{
         width: 100%;
     }
+
+    .menu{
+        bottom: 0;
+        text-align: center;
+        display: none;
+    }
+
+    .menu-content{
+        height: 100vh;
+    }
+
+    .menu-content, .menu-content ul{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .close-menu-label::after{
+        content: '≡';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background: var(--primary-color);
+        color: var(--white-color);
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+        border-radius: 0.5rem;
+    }
+
+    .close-menu:checked~.menu{
+        display: block;
+    }
+
+    .close-menu:checked~.close-menu-label::after{
+        content: '×';
+    }
+
+    .menu-spacing{
+        display: none;
+    }
+
 }
 
 
